--- a/update_mssql_states.yml
+++ b/update_mssql_states.yml
@@ -34,13 +34,25 @@
       when: ms_update is defined
 
 
+#    - name: count mssql states - odbc
+#      community.general.odbc:
+#        dsn: "DRIVER={ODBC Driver 18 for SQL Server};SERVER={{ mssql_server }};DATABASE={{ mssql_db }};UID={{ mssql_usr }};PWD={{ mssql_pwd }};TrustServerCertificate=yes;"
+#        query: "select count(*) from DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR where STATUS = 'IN ATTESA DI INVOCAZIONE'"
+#        commit: false
+#      register: states_count
+#      ignore_errors: true
+#
+#    - debug:
+#        var: states_count
+
     - name: count mssql states - odbc
       community.general.odbc:
         dsn: "DRIVER={ODBC Driver 18 for SQL Server};SERVER={{ mssql_server }};DATABASE={{ mssql_db }};UID={{ mssql_usr }};PWD={{ mssql_pwd }};TrustServerCertificate=yes;"
-        query: "select count(*) from DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR where STATUS = 'IN ATTESA DI INVOCAZIONE'"
+        query: "select count(*),STATUS from DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR group by STATUS"
         commit: false
       register: states_count
       ignore_errors: true
 
     - debug:
         var: states_count
+
