added update_mssql_states_RIPARTENZA fix 1

--- a/update_mssql_states_RIPARTENZA.yml
+++ b/update_mssql_states_RIPARTENZA.yml
@@ -1,3 +1,64 @@
+#
+#- name: "Environment: {{ ambiente }}   Site: {{ sito }} - Query MSSQL Server"
+#  hosts: localhost
+#  gather_facts: false
+#
+#  pre_tasks:
+#
+#    - assert:
+#        that: item is defined
+#      with_items:
+#        - ambiente
+#        - sito
+#        - old_state
+#        - new_state
+#
+#    - name: Loading {{ ambiente }} Environment Settings for Site {{ sito }}
+#      include_vars: 
+#        dir: vars/{{ ambiente }}/{{ sito }}
+#        depth: 1
+#
+#  tasks:
+#
+#    - name: update mssql states RIPARTENZA - odbc
+#      community.general.odbc:
+#        dsn: "DRIVER={ODBC Driver 18 for SQL Server};SERVER={{ mssql_server }};DATABASE={{ mssql_db }};UID={{ mssql_usr }};PWD={{ mssql_pwd }};TrustServerCertificate=yes;"
+#        #dsn: "DRIVER={ODBC Driver 18 for SQL Server};SERVER={mfoo.betatest.local};DATABASE={WPDR0_DR2H_COLLAUDO};UID={WPDR0_TMC};PWD={WPDR0_TMC};TrustServerCertificate=yes;"
+#        query: "update DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR set STATUS = 'COMPLETATO' where FASE like '%RIPARTENZA%'"
+#        commit: true
+#      register: ms_update
+#      ignore_errors: true
+#
+#    - debug:
+#        var: ms_update
+#      when: ms_update is defined
+#
+#
+##    - name: count mssql states - odbc
+##      community.general.odbc:
+##        dsn: "DRIVER={ODBC Driver 18 for SQL Server};SERVER={{ mssql_server }};DATABASE={{ mssql_db }};UID={{ mssql_usr }};PWD={{ mssql_pwd }};TrustServerCertificate=yes;"
+##        query: "select count(*) from DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR where STATUS = 'IN ATTESA DI INVOCAZIONE'"
+##        commit: false
+##      register: states_count
+##      ignore_errors: true
+##
+##    - debug:
+##        var: states_count
+#
+#    - name: count mssql states - odbc
+#      community.general.odbc:
+#        dsn: "DRIVER={ODBC Driver 18 for SQL Server};SERVER={{ mssql_server }};DATABASE={{ mssql_db }};UID={{ mssql_usr }};PWD={{ mssql_pwd }};TrustServerCertificate=yes;"
+#        query: "select count(*),STATUS from DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR group by STATUS"
+#        commit: false
+#      register: states_count
+#      ignore_errors: true
+#
+#    - debug:
+#        var: states_count
+
+
+
+
 
 - name: "Environment: {{ ambiente }}   Site: {{ sito }} - Query MSSQL Server"
   hosts: localhost
@@ -10,8 +71,6 @@
       with_items:
         - ambiente
         - sito
-        - old_state
-        - new_state
 
     - name: Loading {{ ambiente }} Environment Settings for Site {{ sito }}
       include_vars: 
@@ -20,39 +79,29 @@
 
   tasks:
 
-    - name: update mssql states RIPARTENZA - odbc
-      community.general.odbc:
-        dsn: "DRIVER={ODBC Driver 18 for SQL Server};SERVER={{ mssql_server }};DATABASE={{ mssql_db }};UID={{ mssql_usr }};PWD={{ mssql_pwd }};TrustServerCertificate=yes;"
-        #dsn: "DRIVER={ODBC Driver 18 for SQL Server};SERVER={mfoo.betatest.local};DATABASE={WPDR0_DR2H_COLLAUDO};UID={WPDR0_TMC};PWD={WPDR0_TMC};TrustServerCertificate=yes;"
-        query: "update DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR set STATUS = 'COMPLETATO' where FASE like '%RIPARTENZA%'"
-        commit: true
-      register: ms_update
-      ignore_errors: true
+    - name: update mssql server RIPARTENZA - mssql_script
+      community.general.mssql_script:
+        login_user: "{{ mssql_usr }}"
+        login_password: "{{ mssql_pwd }}"
+        login_host: "{{ mssql_server }}"
+        db: "{{ mssql_db }}"
+        script: |
+          update DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR set STATUS = 'COMPLETATO' where FASE like '%RIPARTENZA%'
+      register: sqlout1
 
     - debug:
-        var: ms_update
-      when: ms_update is defined
+        var: sqlout1
 
-
-#    - name: count mssql states - odbc
-#      community.general.odbc:
-#        dsn: "DRIVER={ODBC Driver 18 for SQL Server};SERVER={{ mssql_server }};DATABASE={{ mssql_db }};UID={{ mssql_usr }};PWD={{ mssql_pwd }};TrustServerCertificate=yes;"
-#        query: "select count(*) from DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR where STATUS = 'IN ATTESA DI INVOCAZIONE'"
-#        commit: false
-#      register: states_count
-#      ignore_errors: true
-#
-#    - debug:
-#        var: states_count
-
-    - name: count mssql states - odbc
-      community.general.odbc:
-        dsn: "DRIVER={ODBC Driver 18 for SQL Server};SERVER={{ mssql_server }};DATABASE={{ mssql_db }};UID={{ mssql_usr }};PWD={{ mssql_pwd }};TrustServerCertificate=yes;"
-        query: "select count(*),STATUS from DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR group by STATUS"
-        commit: false
-      register: states_count
-      ignore_errors: true
+    - name: count mssql states
+      community.general.mssql_script:
+        login_user: "{{ mssql_usr }}"
+        login_password: "{{ mssql_pwd }}"
+        login_host: "{{ mssql_server }}"
+        db: "{{ mssql_db }}"
+        script: |
+          select count(*),STATUS from DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR group by STATUS
+      register: sqlout_cnt
 
     - debug:
-        var: states_count
+        var: sqlout_cnt
 
