added fase in update mssql 2

--- a/update_mssql_states_RIPARTENZA.yml
+++ b/update_mssql_states_RIPARTENZA.yml
@@ -95,7 +95,7 @@
       community.general.odbc:
         dsn: "DRIVER={ODBC Driver 18 for SQL Server};SERVER={{ mssql_server }};DATABASE={{ mssql_db }};UID={{ mssql_usr }};PWD={{ mssql_pwd }};TrustServerCertificate=yes;"
         #dsn: "DRIVER={ODBC Driver 18 for SQL Server};SERVER={mfoo.betatest.local};DATABASE={WPDR0_DR2H_COLLAUDO};UID={WPDR0_TMC};PWD={WPDR0_TMC};TrustServerCertificate=yes;"
-        query: "update DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR set STATUS = 'COMPLETATO' where FASE like '%RIPARTENZA%'"
+        query: "update DR2H_RIPARTENZA_COLLAUDO_DR_TOvsPR set STATUS = 'COMPLETATO' where FASE = 'RIPRISTINO'"
         commit: true
       register: sqlout1
       ignore_errors: true
