AWX URI 1: fix 1

--- a/awx_uri_1.yml
+++ b/awx_uri_1.yml
@@ -134,7 +134,7 @@
       retries: 2
       register: jobs_templates
 
-#    - debug: var=jobs_templates
+    - debug: var=jobs_templates
 
     - debug:
         #var: item.summary_fields.project
