--- a/awx_uri_1.yml
+++ b/awx_uri_1.yml
@@ -139,7 +139,7 @@
     - debug:
         #var: item.summary_fields.project
         msg: "Job Template: {{ item.name }}"
-      #when: item.project.name == 'isp_dr' and item.name == 'z play'
+      when: item.name == 'z play'
       with_items: "{{ jobs_templates.json.results }}"
 
     - set_fact:
