--- a/update_mssql_states.yml
+++ b/update_mssql_states.yml
@@ -61,6 +61,6 @@
     - name: Write info to file
       copy:
         content: "Starting DR: {{ sito }}@{{ environment }}"
-        dest: /isp_dir_data/status.txt
+        dest: /isp_dr_data/status.txt
 
 
